--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
             <ul>
               <li><a href="Baker-Hughes.html">Baker Hughes</a></li>
               <li><a href="Schneider.html">Schneider</a></li>
+              <li><a href="Signify.html">Signify</a></li>
+              <li><a href="Zeus.html">Zeus</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
