--- a/sample-inner-page.html
+++ b/sample-inner-page.html
@@ -51,8 +51,10 @@
         <li><a href="pricing.html">Pricing</a></li>
         <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
           <ul>
-            <li><a href="#">Baker Hughes</a></li>
-            <li><a href="#">Schneider</a></li>
+            <li><a href="Baker-Hughes.html">Baker Hughes</a></li>
+            <li><a href="Schneider.html">Schneider</a></li>
+            <li><a href="Signify.html">Signify</a></li>
+            <li><a href="Zeus.html">Zeus</a></li>
           </ul>
         </li>
         <li><a href="contact.html">Contact</a></li>
