--- a/Schneider.html
+++ b/Schneider.html
@@ -91,7 +91,7 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
-        <button onclick="location.href='https://www.se.com/ww/en/';">Click Here</button>
+        <button onclick="location.href='https://www.se.com/id/en/';">Click Here</button>
       </div>
     </section>
 
