--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Electrical and Mechanical</a></li>
+            <li><a href="#service1">Electrical and Mechanical</a></li>
             <li><a href="#">Scada, Automation and Drives</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Transmission Lines</a></li>
