--- a/Zeus.html
+++ b/Zeus.html
@@ -128,11 +128,11 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="service-details.html">Electrical and Mechanical</a></li>
+            <li><a href="service-details.html">Scada, Automation and Drives</a></li>
+            <li><a href="service-details.html">Services</a></li>
+            <li><a href="service-details.html">Transmission Lines</a></li>
+            <li><a href="service-details.html">Spare-parts Supply</a></li>
           </ul>
         </div>
 
