--- a/service-details.html
+++ b/service-details.html
@@ -223,11 +223,11 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Electrical and Mechanical</a></li>
-            <li><a href="#">Scada, Automation and Drives</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Transmission Lines</a></li>
-            <li><a href="#">Spare-parts Supply</a></li>
+            <li><a href="service-details.html">Electrical and Mechanical</a></li>
+            <li><a href="service-details.html">Scada, Automation and Drives</a></li>
+            <li><a href="service-details.html">Services</a></li>
+            <li><a href="service-details.html">Transmission Lines</a></li>
+            <li><a href="service-details.html">Spare-parts Supply</a></li>
           </ul>
         </div>
 
