--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <br>
           <div class="social-links d-flex mt-4">
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/spektrumkrisindoelektrika/" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/company/pt-spektrum-krisindo-elektrika/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
