--- a/index.html
+++ b/index.html
@@ -71,42 +71,8 @@
   <section id="hero" class="hero d-flex align-items-center">
     <div class="container">
       <div class="row gy-4 d-flex justify-content-between text-center">
-        <h2 data-aos="fade-up">PT. Spektrum Krisindo Elektrika</h2>
-     
-          <div class="row gy-4" justify-content-center text-center data-aos="fade-up" data-aos-delay="400">
-
-            <div class="col-lg-3 col-6">
-              <div class="stats-item text-center w-100 h-100">
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Clients</p>
-              </div>
+        <h2 data-aos="fade-up"> </h2>
             </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-6">
-              <div class="stats-item text-center w-100 h-100">
-                <span data-purecounter-start="0" data-purecounter-end="300" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
-              </div>
-            </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-6">
-              <div class="stats-item text-center w-100 h-100">
-                <span data-purecounter-start="0" data-purecounter-end="60" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Workers</p>
-              </div>
-            </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-6">
-              <div class="stats-item text-center w-100 h-100">
-                <span data-purecounter-start="0" data-purecounter-end="1999" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Est</p>
-              </div>
-            </div><!-- End Stats Item -->
-
-          </div>
-        </div>
-      </div>
-    </div>
   </section><!-- End Hero Section -->
   
   <main id="main">
