--- a/Schneider.html
+++ b/Schneider.html
@@ -48,6 +48,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="projects.html">Projects</a></li>
         
         <li class="dropdown" class="active"><a href="#"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
           <ul>
