--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html"class="active">About</a></li>
           <li><a href="services.html">Services</a></li>
+          <li><a href="projects.html">Projects</a></li>
           
           <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
