--- a/service-details.html
+++ b/service-details.html
@@ -76,8 +76,10 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Projects</h2>
-              <p> </p>
+              <h2>Service Details</h2>
+              <p>We serve our client in Industrial, Mining, Airport, 
+                Powerplant and Infrastructure. 
+                Providing high-quality prodcut proven to have the safety level and supported by the transparent certifcation.</p>
             </div>
           </div>
         </div>
@@ -86,7 +88,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Projects</li>
+            <li>Service Details</li>
           </ol>
         </div>
       </nav>
