--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Service Details</h2>
+              <h2>Projects</h2>
               <p>We serve our client in Industrial, Mining, Airport, 
                 Powerplant and Infrastructure. 
                 Providing high-quality prodcut proven to have the safety level and supported by the transparent certifcation.</p>
@@ -88,7 +88,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Service Details</li>
+            <li>Projects</li>
           </ol>
         </div>
       </nav>
