--- a/Baker-Hughes.html
+++ b/Baker-Hughes.html
@@ -97,7 +97,7 @@
         <p>
           Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia. 
         </p>
-        <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Click here to learn more</button>
+        <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Learn more</button>
         <img src="gearbox.jpg" class="img-fluid">
       </div>
     </section>
