--- a/Baker-Hughes.html
+++ b/Baker-Hughes.html
@@ -98,7 +98,7 @@
           Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia. 
         </p>
         <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Learn more</button>
-        <img src="gearbox.jpg" class="img-fluid">
+        <img src="assets/img/gearbox.jpg" class="img-fluid">
       </div>
     </section>
 
