--- a/Baker-Hughes.html
+++ b/Baker-Hughes.html
@@ -98,7 +98,7 @@
         <p>
           Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia. 
         </p>
-        <img src="assets/img/gearbox.jpg" alt="Smaller image" width="200" height="150" style="margin: 0 10px;">
+        <img src="assets/img/gearbox.jpg" alt="Smaller image" width="200" height="150" style="margin: 0 10px;"> <br>
         <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Learn more</button>
       </div>
     </section>
