--- a/Signify.html
+++ b/Signify.html
@@ -91,6 +91,7 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
+        <img src="assets/img/philips.jpeg" alt="Smaller image" width="200" height="150" style="margin: 0 10px;"> <br><br>
         <button onclick="location.href='https://www.signify.com/global';">Click Here</button>
       </div>
     </section>
