--- a/Baker-Hughes.html
+++ b/Baker-Hughes.html
@@ -94,11 +94,11 @@
     <section class="sample-page">        
       
       <div class="container" data-aos="fade-up">
-        <h3> Gearbox and Gear Couplings</h3>
-        <p>
-          Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia. 
+        <h3>Gearbox and Gear Couplings</h3>
+        <img src="assets/img/gearbox.jpg" alt="Smaller image" width="400" height="300" style="float: left; margin: 0 20px 10px 0;">
+        <p style="overflow: auto;">
+          Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia.
         </p>
-        <img src="assets/img/gearbox.jpg" alt="Smaller image" width="400" height="300" style="margin: 0 5px;"> <br><br>
         <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Learn more</button>
       </div>
     </section>
