--- a/Baker-Hughes.html
+++ b/Baker-Hughes.html
@@ -98,6 +98,11 @@
         <h3 style="overflow: auto;">Gearbox and Gear Couplings</h3>
         <p style="overflow: auto;">
           Spektrum Krisindo Elektrika is the ONLY one channel partners for Gearbox LUFKIN and ALLEN GEARS in Indonesia.
+          We are Lufkin Gears and Allen Gears, Baker Hughes businesses.
+
+          We provide reliable power transmission technologies and services to solve the unique needs of every application across industry segments.
+
+
         </p>
         <button onclick="window.open('https://www.bakerhughes.com/lufkin-gears-allen-gears-gearboxes-gear-couplings', '_blank');">Learn more</button>
       </div>
