--- a/Zeus.html
+++ b/Zeus.html
@@ -91,7 +91,12 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
-        <button onclick="location.href='https://www.signify.com/global';">Click Here</button>
+        <img src="assets/img/penangkalpetir.jpg" alt="Smaller image" width="400" height="300" style="float: left; margin: 0 20px 10px 0;">
+        <h3 style="overflow: auto;">Lighting protection</h3>
+        <p style="overflow: auto;">
+          Producing the most suitable ESE Air Terminal Lightning protection, Electrostatic Air Terminal and surge arrester for application in the tropical and sub-tropical area. 
+        </p>
+        <button onclick="window.open('https://www.zeusprima.com', '_blank');">Learn more</button>
       </div>
     </section>
 
