--- a/Signify.html
+++ b/Signify.html
@@ -91,8 +91,12 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
-        <img src="assets/img/philips.jpeg" alt="Smaller image" width="200" height="150" style="margin: 0 10px;"> <br><br>
-        <button onclick="location.href='https://www.signify.com/global';">Click Here</button>
+        <img src="assets/img/philips.jpeg" alt="Smaller image" width="400" height="300" style="float: left; margin: 0 20px 10px 0;">
+        <h3 style="overflow: auto;">Lighting</h3>
+        <p style="overflow: auto;">
+          Signify is the world leader in lighting. We provide professional customers and consumers with quality products, systems and services.
+        </p>
+        <button onclick="window.open('https://www.signify.com/en-id/brands', '_blank');">Learn more</button>
       </div>
     </section>
 
