--- a/about.html
+++ b/about.html
@@ -198,21 +198,21 @@
       </div>
       
 
-      <div class="col-lg-3 col-md-6 d-flex"> 
-        <div class="member"> 
-          <img src="assets/img/team/IMG_PT SKE (42).JPG" class="img-fluid zoom" alt=""> 
-          <div class="member-content"> 
-            <h4>Hendy Kowanda</h4> 
-            <span>Director</span> 
-            <div class="social"> 
-              <a href=""><i class="bi bi-twitter"></i></a> 
-              <a href=""><i class="bi bi-facebook"></i></a> 
-              <a href=""><i class="bi bi-instagram"></i></a> 
-              <a href=""><i class="bi bi-linkedin"></i></a> 
+        <div class="col-lg-3 col-md-6 d-flex"> 
+          <div class="member"> 
+            <img src="assets/img/team/IMG_PT SKE (42).JPG" class="img-fluid" alt=""> 
+            <div class="member-content"> 
+              <h4>Hendy Kowanda</h4> 
+              <span>Director</span> 
+              <div class="social"> 
+                <a href=""><i class="bi bi-twitter"></i></a> 
+                <a href=""><i class="bi bi-facebook"></i></a> 
+                <a href=""><i class="bi bi-instagram"></i></a> 
+                <a href=""><i class="bi bi-linkedin"></i></a> 
+              </div> 
             </div> 
           </div> 
-        </div> 
-      </div>
+        </div>
             
               <div class="col-lg-3 col-md-6 d-flex">
                 <div class="member">
