--- a/Schneider.html
+++ b/Schneider.html
@@ -92,7 +92,12 @@
 
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
-        <button onclick="location.href='https://www.se.com/id/en/';">Click Here</button>
+        <img src="assets/img/schneider.jpg" alt="Smaller image" width="350" height="350" style="float: left; margin: 0 20px 10px 0;">
+        <h3 style="overflow: auto;"> </h3>
+        <p style="overflow: auto;">
+          We drive digital transformation by integrating world-leading process and energy technologies to realise the full efficiency and sustainability opportunities for your business.
+        </p>
+        <button onclick="window.open('https://www.se.com/id/en/', '_blank');">Learn more</button>
       </div>
     </section>
 
