--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
             
               <div class="col-lg-2 col-md-3 d-flex">
                 <div class="member">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/team/Irna.jpg" class="img-fluid" alt="">
                   <div class="member-content">
                     <h4>Irna</h4>
                     <span>Manager</span>
@@ -283,7 +283,7 @@
             
               <div class="col-lg-2 col-md-3 d-flex">
                 <div class="member">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/team/bakhtiar.jpg" class="img-fluid" alt="">
                   <div class="member-content">
                     <h4>Bakhtiar Akhmad</h4>
                     <span>Manager</span>
