--- a/about.html
+++ b/about.html
@@ -313,7 +313,7 @@
           </div>
         </div>
         <div>
-          <img src="url('assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg')" alt="">
+          <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="">
         </div>
       </div>
     </div>
