--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="col-lg-2 col-md-3 d-flex">
           <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="">
         </div>
       </div>
