--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
         </div>
       </div>
       <div class="">
-        <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="" style="width: 100%;">
+        <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="" style="width: 100%; height: auto;">
       </div>
     </div>
   </section>
