remove div line 316

--- a/about.html
+++ b/about.html
@@ -313,9 +313,7 @@
           </div>
         </div>
       </div>
-      <div class="">
-        <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="" style="width: 100%; height: auto;">
-      </div>
+        <img src='assets/img/IMG_PT\ SKE\ \(16\)-Rev2.jpg' alt="">
     </div>
   </section>
 
