--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
         <h2>Our Team</h2> 
       </div> 
       <div class="row"> 
-        <div class="col-lg-3 col-md-6 d-flex">
+        <div class="col-lg-3 d-flex">
           <div class="member">
             <img src="assets/img/team/IMG_PT SKE (59).JPG" class="img-fluid" alt="">
             <div class="member-content">
@@ -197,7 +197,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 d-flex"> 
+        <div class="col-lg-3 d-flex"> 
           <div class="member"> 
             <img src="assets/img/team/IMG_PT SKE (42).JPG" class="img-fluid" alt=""> 
             <div class="member-content"> 
@@ -213,7 +213,7 @@
           </div> 
         </div>
             
-        <div class="col-lg-3 col-md-6 d-flex">
+        <div class="col-lg-3 d-flex">
           <div class="member">
             <img src="assets/img/team/IMG_PT SKE (85).JPG" class="img-fluid" alt="">
             <div class="member-content">
