--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
       </div> 
       <div class="row"> 
         <div class="col-lg-3">
-          <div class="member">
+          <div class="Director">
             <img src="assets/img/team/IMG_PT SKE (59).JPG" class="img-fluid" alt="">
             <div class="member-content">
               <h4>Handaja Kowanda</h4>
@@ -198,7 +198,7 @@
         </div>
 
         <div class="col-lg-3"> 
-          <div class="member"> 
+          <div class="Director"> 
             <img src="assets/img/team/IMG_PT SKE (42).JPG" class="img-fluid" alt=""> 
             <div class="member-content"> 
               <h4>Hendy Kowanda</h4> 
@@ -214,7 +214,7 @@
         </div>
             
         <div class="col-lg-3">
-          <div class="member">
+          <div class="Director">
             <img src="assets/img/team/IMG_PT SKE (85).JPG" class="img-fluid" alt="">
             <div class="member-content">
               <h4>Indra Tantaputra</h4>
