--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
       
         <div class="col-lg-2 col-md-3 d-flex">
           <div class="member">
-            <img src="assets/img/team/Irna.jpg" class="img-fluid" alt="">
+            <img src="assets/img/team/Irna (2).jpg" class="img-fluid" alt="">
             <div class="member-content">
               <h4>Irna</h4>
               <span>Manager</span>
