--- a/Zeus.html
+++ b/Zeus.html
@@ -45,7 +45,7 @@
     <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -53,7 +53,7 @@
             <li><a href="Baker-Hughes.html">Baker Hughes</a></li>
             <li><a href="Schneider.html">Schneider</a></li>
             <li><a href="Signify.html">Signify</a></li>
-            <li><a href="Zeus.html">Zeus</a></li>
+            <li><a href="Zeus.html" class="active">Zeus</a></li>
           </ul>
         </li>
         <li><a href="contact.html">Contact</a></li>
