--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
             <img src="assets/img/IMG_0382.JPG" class="img-fluid" alt="">
-            <a href="assets/Rickroll.mp4" class="glightbox play-btn"></a>
+            <a href="..." class="glightbox play-btn"></a>
           </div>
           <div class="col-lg-6 content order-last  order-lg-first">
             <h3>About Us</h3>
