--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   <main id="main">
 
     <!-- ======= About Us Section ======= -->
+
+    <script type="text/javascript" src="https://www.juicer.io/embed/alvin_kow/embed-code.js" async defer></script>
+    
     <section id="about" class="about pt-0" style="margin: 30px 0">
       <div class="container" data-aos="fade-up">
 
