--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
-            <img src="assets/img/IMG_0382.JPG" class="img-fluid" alt="">
+            <img src="assets/img/IMG_PT SKE (200).JPG" class="img-fluid" alt="">
             <a href="assets/" class="glightbox play-btn"></a>
           </div>
           <div class="col-lg-6 content order-last  order-lg-first">
