--- a/about.html
+++ b/about.html
@@ -101,7 +101,13 @@
           <div class="col-lg-6 content order-last  order-lg-first">
             <h3>About Us</h3>
             <p>
-            Established in Jakarta since 1999, initially operated as a supplier of mechanical and electrial products. Through remarkable business growth and performance, we have now in the position of being one of the country's leading engineering, procurement, and construction (EPC) firms.
+              PT Spektrum Krisindo Elektrika, established in 1999, is a well-established contracting company based in Jakarta, Indonesia. The company primarily operates in the industrial sector, providing services in Civil, Mechanical, and Electrical contracting. They are involved in various segments including industrial automation, mining, oil and gas, and power distribution. Their offerings include system integration, industrial automation, and control solutions. 
+
+              The company has built a strong reputation over the years by forming strategic partnerships with global companies like Schneider Electric and Philips Lighting, which has allowed them to supply high-quality products and solutions in the Indonesian market. They have also expanded into areas like instrumentation and control equipment, becoming a key player in these fields.
+              
+              Their mission revolves around delivering high-quality services and products that meet their clients' needs while helping them achieve cost efficiencies and competitive advantages. PT Spektrum Krisindo Elektrika continues to grow by staying committed to providing reliable solutions across a variety of industries [oai_citation:3,PT. Spektrum Krisindo Elektrika](https://www.spektrum-krisindo.com/) [oai_citation:2,PT. Spektrum Krisindo Elektrika](https://spektrum-krisindo.com/common/about_us.php) [oai_citation:1,PT Spektrum Krisindo Elektrika](https://perusahaan.net/detail/eroMK/Spektrum-Krisindo-Elektrika/). 
+              
+              If you need more specific information about their services or recent projects, feel free to ask!
             </p>
             <ul>
               <li data-aos="fade-up" data-aos-delay="100">
