--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
             <img src="assets/img/IMG_PT SKE (200).JPG" class="img-fluid" alt="">
-            <a href="assets/" class="glightbox play-btn"></a>
+            <a href="assets/vid spektrum.mp4" class="glightbox play-btn"></a>
           </div>
           <div class="col-lg-6 content order-last  order-lg-first">
             <h3>About Us</h3>
             <p>
-              PT Spektrum Krisindo Elektrika, established in 1999, is a well-established contracting company based in Jakarta, Indonesia. The company primarily operates in the industrial sector, providing services in Civil, Mechanical, and Electrical contracting. They are involved in various segments including industrial automation, mining, oil and gas, and power distribution.
+              PT Spektrum Krisindo Elektrika, founded in 1999 in Jakarta, Indonesia, is a contracting company specializing in Civil, Mechanical, and Electrical services. Operating in sectors like industrial automation, mining, oil and gas, and power distribution, the company serves the industrial market.
             </p>
             <ul>
               <li data-aos="fade-up" data-aos-delay="100">
